--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
+requires = ["setuptools", "setuptools-scm", "pyperclip"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -25,6 +25,7 @@ classifiers = [
 ]
 requires-python = ">=2.7"
 dynamic = ["version"]
+dependencies = ['pyperclip']
 
 [project.urls]
 "Homepage" = "https://github.com/asweigart/cliprec"
